--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+body{
+	align-items:center;
+	padding: 20px;
+	background-color: rgb(204, 204, 204)
+}
+li{
+	list-style-type:none;
+}
+h1{
+	text-align:center;
+}
+#list{
+	padding: 20px 0;
+	background-color: white;
+	border-radius:5px;
+}
